2006-05-14  Don Allingham  <don@gramps-project.org>
	* src/DateHandler/__init__.py: import DateParser and DateDisplay
	* src/DataViews/_PersonView.py: default gender filter to "any"
	* configure.in: bump up to 2.1.2

2006-05-14  Alex Roitman  <shura@gramps-project.org>
	* src/DateHandler/__init__.py: Proper import sequence.
	* src/DateHandler/_DateHandler.py: Split into parts.
	* src/DateHandler/_DateUtils.py: Add new file.
	* src/DateHandler/_Date_sk.py: Bring to the new module structure.
	* src/DateHandler/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/GrampsDb/_ReadGedcom.py: Import from proper module.

	* src/plugins/ChangeTypes.py (init_gui): Work around intltool bug.
	* src/plugins/Summary.py: Set titles properly.
	* src/plugins/CountAncestors.py: Add window title, remove extra text.
	* src/Filters/Rules/Person/_HasNoteRegexp.py: Import re module.

2006-05-13  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Add option for number of generations in
	  ancestor graph (bug #0000077)
	* src/PluginUtils/_Report.py: Fix custom paper size bug (bug #0000084)

2006-05-13  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_FamilyView.py (FamilyView.redraw): handle history

2006-05-13  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py (show_url): Set up link handler.
	* src/plugins/CmdRef.py (CmdRef.write_ref): Change the module name.

2006-05-13  Don Allingham  <don@gramps-project.org>
	* src/plugins/RelCalc.py: provide default search value

2006-05-12  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: add non-functioning (for now) clear
	button
	* src/Config/_GrampsGconfKeys.py: get_default fix
	* src/GrampsCfg.py: add revert option for colors
	* src/Config/_GrampsGconfKeys.py: added get_default
	* src/Config/_GrampsIniKeys.py: added get_default

2006-05-12  Alex Roitman  <shura@gramps-project.org>
	* data/gramps.schemas.in: Brighter colors to use with foreground.