@@ -1,3 +1,7 @@
+2006-05-14  Brian Matherly  <brian@gramps-project.org>
+	* src/PluginUtils/_ReportUtils.py: Change strings to include gender instead
+	  of "child of"
+
 2006-05-14  Don Allingham  <don@gramps-project.org>
 	* src/DateHandler/__init__.py: import DateParser and DateDisplay
 	* src/DataViews/_PersonView.py: default gender filter to "any"
